fixing fog img to overlap ujj anim

--- a/src/App.css
+++ b/src/App.css
@@ -50,7 +50,18 @@ h2 {
   border-radius: 50%;
   background: lightblue;
   animation: animate 6s linear infinite;
+  /* z-index: 9; */
 }
+
+.anim-fog-div {
+  background-image: url('./images/fog.png');
+  background-position: center;
+  background-size: cover;
+  height: 100vh;
+  position: relative;
+}
+
+
 
 @keyframes animate {
   0% {
@@ -136,7 +147,6 @@ h2 {
 
 body {
   background-image: linear-gradient(0deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 17%, rgba(0,212,255,1) 100%);
-  background-image: url('./images/fog.png');
 }
 
 .breathing-tech-container {
@@ -145,6 +155,7 @@ body {
   margin-left: 30%;
   width: 46%;
   /* background: black; */
+
 }
 
 .bt-instructions {
